fix guide text wrap

--- a/assets/src/scss/5-pages/_guide.scss
+++ b/assets/src/scss/5-pages/_guide.scss
@@ -171,3 +171,10 @@ div.image {
   @include rem(height, 12px);
   background-image: url(../../../image/guide/tarr.svg);
 }
+
+.guide-view {
+  code,
+  a {
+    word-break: break-word;
+  }
+}
